# wasm-game-lib-template

./: Cargo.toml
pkg/: index.html
src/: lib.rs
